fix: Adjust border-radius for logo image box on mobile view

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -66,6 +66,7 @@
     .logoImageBox {
         width: 70px;
         height: 70px;
+        border-radius: calc(70px / 4);
     }
 
     .textContainer {
